<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:fontFamily="@font/hind_regular"
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:fontFamily="@font/hind_regular"
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_myprofile"
        android:title="@string/profile" />
<!--    <item-->
<!--        android:id="@+id/action_3f"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_my"-->
<!--        android:title="@string/my3F"-->
<!--        />-->

    <item
        android:fontFamily="@font/hind_regular"
        android:id="@+id/action_requests"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/requests"
        />
    <item
        android:visible="false"
        android:fontFamily="@font/hind_regular"
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_off" />
</menu>