<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/lang_baground">


        <TextView
            android:fontFamily="@font/hind_regular"
            android:id="@+id/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/confirmation"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:textStyle="bold" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="@dimen/margin_10"
                android:layout_below="@+id/dialogText"

                android:background="@drawable/line_bg" />


        <TextView
            android:fontFamily="@font/hind_regular"
            android:id="@+id/dialogMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:gravity="center"
            android:padding="1dp"

            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="@dimen/margin_10"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:fontFamily="@font/hind_regular"
                android:id="@+id/cancel_btn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text= "@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorOrange" />

            <Button
                android:fontFamily="@font/hind_regular"
                android:id="@+id/ok_btn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/colorOrange" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>