<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">


        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lyt_farmerName"
            android:weightSum="1">

            <TextView
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/name"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/farmerName"
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/email"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/email"
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lyt_mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:text="@string/mobileNumber"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/mobilenumber"
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:text="@string/contactNumber"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/contactNumber"
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_rolename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
           >

            <TextView
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="@string/rollname"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rolename"
                style="@style/Common_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_clustername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            style="@style/Common_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:text="@string/Cluster_name"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/cluster"
            style="@style/Common_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.7"
            android:textAlignment="textStart"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>