<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/selecte_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="2dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_from_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:clipChildren="false"
            android:layout_weight="0.4"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:fontFamily="@font/hind_regular"
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:focusable="false"
                android:hint="@string/fromDate"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:clipChildren="false"
            android:layout_weight="0.4"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:fontFamily="@font/hind_regular"
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/toDate"
                android:focusable="false"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:fontFamily="@font/hind_regular"
            android:id="@+id/buttonSubmit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@drawable/button_bg"
            android:text="@string/submit"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/margin_12" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:weightSum="1">-->



<!--        <EditText-->
<!--            android:id="@+id/fromDate"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/fromDate"-->
<!--            android:layout_marginLeft="4dp"-->
<!--            android:textColorHint="@color/half_black2"-->
<!--            android:textSize="24dp"-->
<!--            android:layout_weight="0.4"-->
<!--            android:paddingTop="8dp"-->
<!--            android:paddingLeft="@dimen/_8dp"-->
<!--            android:background="@drawable/edit_text_background"-->
<!--            android:fontFamily="@font/hind_regular"-->
<!--            android:gravity="center_vertical"-->
<!--            android:inputType="none"/>-->

<!--        <TextView-->
<!--            android:id="@+id/toDate"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/toDate"-->
<!--            android:textColorHint="@color/half_black2"-->
<!--            android:background="@drawable/edit_text_background"-->
<!--            android:textSize="24dp"-->
<!--            android:layout_weight="0.4"-->
<!--            android:layout_marginLeft="4dp"-->
<!--            android:layout_marginRight="4dp"-->
<!--            android:paddingTop="8dp"-->

<!--            android:paddingLeft="@dimen/_8dp"-->
<!--            android:fontFamily="@font/hind_regular"-->
<!--            android:gravity="center_vertical"-->
<!--            android:inputType="none"/>-->

<!--        <Button-->
<!--            android:id="@+id/submit_Btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/submit"-->
<!--            android:textSize="18dp"-->
<!--            android:layout_weight="0.2"-->
<!--            style="@style/Common_Button"-->
<!--            android:fontFamily="@font/hind_regular"/>-->

<!--    </LinearLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_marginTop="70dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:fontFamily="@font/hind_regular"
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        android:text="@string/noDataAvailable" />

    </FrameLayout>
